--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
     "private": true,
     "scripts": {
-        "dev": "vite",
+        "client": "vite",
+        "server": "php artisan serve",
+        "dev": "concurrently \"npm run server\" \"npm run client\"",
         "build": "vite build"
     },
     "devDependencies": {
@@ -16,6 +18,7 @@
         "vite": "^3.0.0"
     },
     "dependencies": {
+        "concurrently": "^7.6.0",
         "sweetalert2": "^11.6.14"
     }
 }
