--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
         "vite": "^3.0.0"
     },
     "dependencies": {
-        "concurrently": "^7.6.0",
-        "sweetalert2": "^11.6.14"
+        "concurrently": "^7.6.0"
     }
 }
